--- a/index.html
+++ b/index.html
@@ -2,19 +2,10 @@
 <head>
 </head>
 <body>
-我是身體 <br/>
-下面是我學校的網址
-<hr/>
-<a href="https://www.nkust.edu.tw/">高科大</a>
-<h1>標題一</h1>
-<p>段落一</p>
-<p>段落二</p>
-<h2>標題二</h2>
-<p>段落一</p>
+<h1  style="color:green" > 章節1  </h1>
+<h2>第一小節</h2>
+<h1 class="new" > 章節2 </h1>
 
-<ol>
-<li>item1</li>
-<li>item2</li>
-</ol>
+刷 樣式
 </body>
 </html>
