--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <html>
 <head>
+<style>
+h1{color:green;}
+p{color:red;}
+li{color:blue;}
+</style>
 </head>
 <body>
-<h1  style="color:green" > 章節1  </h1>
+<h1  style="font-size:2.5em;
+color:green;border:dotted 3px #2196f3;"
+ > 章節1  </h1>
 <h2>第一小節</h2>
 <h1 class="new" > 章節2 </h1>
-
-刷 樣式
+<p>paragraph 1
+<ul>
+<li>item1</li>
+<li>item2</li>
+<li>item3</li>
+</ul>
 </body>
 </html>
