--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <html>
 <head>
 <style>
-h1{color:green;}
-p{color:red;}
-li{color:blue;}
+#container
+{display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-content: stretch;
+    align-items: flex-start;}
+#item1{background-color:#d97979;}
+#item2{background-color:#f3a92e;}
+#item3{background-color:#57c1b7;}
 </style>
 </head>
 <body>
-<h1  style="font-size:2.5em;
-color:green;border:dotted 3px #2196f3;"
- > 章節1  </h1>
-<h2>第一小節</h2>
-<h1 class="new" > 章節2 </h1>
-<p>paragraph 1
-<ul>
-<li>item1</li>
-<li>item2</li>
-<li>item3</li>
-</ul>
+<div id="container">
+
+<div id="item1">1</div>
+<div id="item2">2</div>
+<div id="item3">3</div>
+
+</div>
 </body>
 </html>
